--- a/index.html
+++ b/index.html
@@ -3,9 +3,150 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nausher Ali</title>
-    <link rel="stylesheet" href="css/style.css">
+    
     <link rel="icon" href="favicon.ico">
     <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
+<style>
+    
+body{
+    color: #40514e;
+    text-align: center;
+    margin: 0px;
+    font-family: 'merriweather', serif;  
+}
+h1{
+    color: #66bfbf;
+    margin: 50px auto 0 auto;
+    font-size: 5.625rem;
+   
+    font-family: 'Sacramento', cursive;
+}
+
+h2{
+    color: #66bfbf;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 2.5rem;
+    font-weight: normal;
+    padding-bottom: 10px;
+}
+
+h3{
+    color: #11999e;
+    font-family: 'Montserrat', sans-serif;
+}
+
+p{
+    line-height: 2;
+}
+
+hr{
+    border: dotted #eaf6f6 6px;
+    border-bottom: none;
+    width: 4%;
+    margin:  100px auto;
+}
+a{
+    color:#11999e;
+    font-family: 'monsterrate', sans-serif;
+    margin: 10px 20px;
+    text-decoration: none;
+}
+
+a:hover{
+    color:#eaf6f6 ;
+}
+
+.top-container
+{
+    background-color: #e4f9f5;
+    position: relative;
+    padding-top: 100px;    
+}
+.middle-container {
+    margin: 100px 0;
+}
+
+.bottom-container{
+    background-color: #66bfbf;
+    padding: 50px 0px 20px;
+}
+
+.skill-row{
+    width: 50%;
+    margin: 100px auto 100px auto;
+    text-align: left;    
+}
+
+.pro{
+    text-decoration: underline;
+}
+
+.intro{
+    width: 37%;
+    margin:auto;
+}
+
+.contact-message{
+    width: 40%;
+    margin: 40px auto;;
+}
+
+.copyright{
+   color:#eaf6f6;
+   font-size: 0.75rem; 
+}
+
+.top-cloud{
+    position: absolute;
+    right: 300px;
+    top:40px;
+}
+
+.bottom-cloud{
+    position: absolute;
+    left: 250px;
+    bottom: 300px;
+}
+
+
+.mypic{
+    padding-top: 100px;
+    width: 200px;
+    height: 235px;
+}
+.mountain{
+  
+ ;
+}
+
+.code-img{
+    width: 25%;
+    float: left;
+    margin-right: 30px;
+    border-radius: 50%;
+}
+
+.chilli-img{
+    width: 25%;
+    float: right;
+    margin-left: 30px;
+}
+.btn{
+    padding: 8px;
+    background-color:#11cdd4;
+    color: cornsilk;
+    border-radius: 9px;
+    text-decoration: none;
+}
+
+.btn:hover{
+    background-color: #30e3cb;
+    color:cornsilk ;
+}
+
+
+    </style>
+
 </head>
 <body>
     <div class="top-container">
