--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@ a:hover{
      
     <div class="bottom-container">
         <a class="footer-link" href="https://www.linkedin.com/in/nausher-ali-001777194/">LinkedIn</a>
-        <a class="footer-link" href="https://twitter.com/ansari_nausher">Twitter</a>
+        <a class="footer-link" href="https://twitter.com/nausherofficial">Twitter</a>
         <a class="footer-link" href="#">Website</a>
         <p class="copyright">© 2020 Nausher Ali.</p>
     </div>
